# gobject-example-rs

./: .gitignore  .gitmodules  Cargo.toml  Ex-0.1.pc  Makefile  README.md  build.rs  test.c  test.js  test.py  test.vala
include/ex/: bar.h  color.h  error.h  ex.h  flags.h  foo.h  nameable.h  rstring.h  shared-rstring.h
src/: lib.rs
src/bar/: ffi.rs  imp.rs  mod.rs
src/color/: ffi.rs  imp.rs  mod.rs
src/error/: ffi.rs  imp.rs  mod.rs
src/flags/: ffi.rs  imp.rs  mod.rs
src/foo/: ffi.rs  imp.rs  mod.rs
src/nameable/: ffi.rs  imp.rs  mod.rs
src/rstring/: ffi.rs  imp.rs  mod.rs
src/shared_rstring/: ffi.rs  imp.rs  mod.rs
