[package]
name = "gobject-example"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]

[dependencies]
bitflags = "1.0"
libc = "0.2"
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs" }
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
once_cell = "1.0"

[lib]
crate-type = ["cdylib"]

[features]
bindings = []
