[package]
name = "gobject-example"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
libc = "0.2"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
once_cell = "1.0"

[features]
bindings = []
capi = [] # needed by cargo-c

[build-dependencies]
cargo_metadata = "0.13.1"
cbindgen = { path = "cbindgen", features = ["gobject"] }

[package.metadata.capi.library]
rustflags = "-Cpanic=abort"

[package.metadata.capi.header]
subdirectory = "gobject-example-0.1"
generation = false # gobject cbindgen support is missing atm

[package.metadata.capi.pkg_config]
filename = "gobject-example-0.1"
requires = "gobject-2.0"

[workspace]
members = [
    "cbindgen",
    ".",
]
