[package]
name = "gobject-example"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[lib]
crate-type = ["cdylib"]

[features]
bindings = []
